force-app/main/default/objects/TwitchUser__c/TwitchUser__c.object-meta.xml
<CustomObject>
    <description>Stores information about a user on the Twitch platform.</description>
    <label>Twitch User</label>
    <nameField>
        <label>Display Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Twitch Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>