force-app/main/default/objects/TwitchUser__c/fields/BroadcasterType__c.field-meta.xml
<CustomField>
    <fullName>BroadcasterType__c</fullName>
    <description>The type of broadcaster. Possible values are:

- affiliate — An affiliate broadcaster
- partner — A partner broadcaster
- &quot;&quot; — A normal broadcaster</description>
    <inlineHelpText>The type of broadcaster.</inlineHelpText>
    <label>Broadcaster Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>affiliate</fullName>
            </value>
            <value>
                <fullName>partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>