force-app/main/default/objects/TwitchUser__c/fields/CreatedAt__c.field-meta.xml
<CustomField>
    <fullName>CreatedAt__c</fullName>
    <description>The UTC date and time that the user’s account was created.</description>
    <inlineHelpText>The UTC date and time that the user’s account was created.</inlineHelpText>
    <label>Created At</label>
    <type>DateTime</type>
</CustomField>