force-app/main/default/objects/TwitchUser__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>The user’s description of their channel.</description>
    <inlineHelpText>The user’s description of their channel.</inlineHelpText>
    <label>Description</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>