force-app/main/default/objects/TwitchUser__c/fields/Login__c.field-meta.xml
<CustomField>
    <fullName>Login__c</fullName>
    <description>The user’s login name on the Twitch platform.</description>
    <externalId>true</externalId>
    <inlineHelpText>The user’s login name on the Twitch platform.</inlineHelpText>
    <label>Login</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>