force-app/main/default/objects/TwitchUser__c/fields/OfflineImageURL__c.field-meta.xml
<CustomField>
    <fullName>OfflineImageURL__c</fullName>
    <description>A URL to the user’s offline image.</description>
    <inlineHelpText>A URL to the user’s offline image.</inlineHelpText>
    <label>Offline Image URL</label>
    <type>Url</type>
</CustomField>