force-app/main/default/objects/TwitchUser__c/fields/ProfileImageURL__c.field-meta.xml
<CustomField>
    <fullName>ProfileImageURL__c</fullName>
    <description>A URL to the user’s profile image.</description>
    <inlineHelpText>A URL to the user’s profile image.</inlineHelpText>
    <label>Profile Image URL</label>
    <type>Url</type>
</CustomField>