force-app/main/default/objects/TwitchUser__c/fields/TwitchId__c.field-meta.xml
<CustomField>
    <fullName>TwitchId__c</fullName>
    <description>An ID that identifies the user on the Twitch platform.</description>
    <externalId>true</externalId>
    <inlineHelpText>An ID that identifies the user on the Twitch platform.</inlineHelpText>
    <label>Twitch Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>