force-app/main/default/objects/TwitchUser__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>The type of user. Possible values are:

- admin — Twitch administrator
- global_mod
- staff — Twitch staff
- &quot;&quot; — Normal use</description>
    <inlineHelpText>The type of user.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>admin</fullName>
            </value>
            <value>
                <fullName>global_mod</fullName>
            </value>
            <value>
                <fullName>staff</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>